# LION

./: LICENSE  README.md  clustering.py  clustering_mod.py  requirements.txt  setup.cfg  setup.py
archived_scripts/: analysis_and_plots.py  clustering1.py  clustering_memory_opt.py  clustering_mod.py  clustering_pool_mod.py  original_paper_plots.py
cori_tests/: run.sh
cori_tests/test2/: analysis_and_plots.py  cluster_input_sample.csv  cluster_output_sample.csv  clustering.py  collect_and_cluster.py  data_collection.py  notes.txt  run.py  sample_results.parquet
darshan-3.3.1/darshan-util/: Makefile  config.status  darshan-analyzer  darshan-convert  darshan-diff  darshan-dxt-parser  darshan-merge  darshan-parser  darshan-util-config.h  jenkins-hash-gen
example/: run.py  run.sh  run_H2O_single_user.py  simple_user.py
example/data/: cluster_info.parquet  run_info.parquet
example/junk/: cluster_info.parquet  parse.sh  run_info.parquet
example/parsed_darshan_logs/: USER341128U_flash4_id10751697_12-28-56831-13491486016384318225_1.darshan-parsed  USER347904U_cm1.exe_id10737136_12-22-83949-16875411194301699497_1.darshan-parsed  USER347904U_cm1.exe_id10737137_12-22-83949-2885801480182781685_1.darshan-parsed  USER347904U_cm1.exe_id10737220_12-22-83950-7876363797567889199_1.darshan-parsed  USER378326U_vasp_id10735094_12-22-83982-3120320644804715121_1.darshan-parsed  USER378326U_vasp_id10735098_12-22-83983-15803326160934384177_1.darshan-parsed  USER397009U_lmp_xe6_id10749465_12-27-79510-16919768293553338133_1.darshan-parsed  (+650 more)
src/LION.egg-info/: PKG-INFO  SOURCES.txt
(+664 files in other folders)
