[metadata]
name = LION
version = 0.1
author = Emily Costa
author_email = costa.em@northeastern.edu    
description = A comprehensive library for analyzing Darshan logs collected on high-performance computing (HPC) systems.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GoodwillComputingLabs/LION/
project_urls =
    Bug Tracker = https://github.com/GoodwillComputingLabs/LION/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src